fix width sizing for mobile. hide y-scrollbar

--- a/fanthropy/src/styles/global.css
+++ b/fanthropy/src/styles/global.css
@@ -8,6 +8,12 @@
 html {
   height: fit-content;
   margin: 0;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 @theme {
